<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivCover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:fitsSystemWindows="true"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/gl_cover"
        app:srcCompat="@drawable/cover" />

    <android.support.constraint.Guideline
        android:id="@+id/gl_cover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="165dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLayer"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/ivCover">

        <TextView
            android:id="@+id/firstText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_texto_principal"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorWithe"
            android:visibility="visible" />

        <TextView
            android:id="@+id/secondText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_texto_secundario"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorWithe"
            android:visibility="visible" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="135dp"
        android:visibility="visible"
        app:backgroundTint="@color/colorFabCalendar"
        app:fabSize="normal"
        app:layout_constraintEnd_toStartOf="@+id/fabPoint"
        app:layout_constraintTop_toTopOf="@+id/ivCover"
        app:srcCompat="@drawable/ic_calendar_white" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="135dp"
        android:visibility="visible"
        app:backgroundTint="@color/colorFabPosition"
        app:fabSize="normal"
        app:layout_constraintEnd_toStartOf="@+id/gl_right"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_location_withe" />

    <ImageView
        android:id="@+id/iv_ic_localizacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/label_localizacao"
        app:layout_constraintStart_toStartOf="@+id/gl_left"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@drawable/ic_location_blue" />

    <ImageView
        android:id="@+id/iv_ic_telefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/label_telefone"
        app:layout_constraintStart_toStartOf="@+id/gl_left"
        app:layout_constraintTop_toBottomOf="@+id/iv_ic_localizacao"
        app:srcCompat="@drawable/ic_local_phone_blue" />

    <ImageView
        android:id="@+id/iv_ic_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/label_email"
        app:layout_constraintStart_toStartOf="@+id/gl_left"
        app:layout_constraintTop_toBottomOf="@+id/iv_ic_telefone"
        app:srcCompat="@drawable/ic_email_blue" />

    <TextView
        android:id="@+id/label_localizacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/label_localizacao"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
        app:layout_constraintStart_toEndOf="@+id/iv_ic_localizacao"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/ex_endereco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/exemplo_endereco"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintEnd_toStartOf="@+id/gl_right"
        app:layout_constraintStart_toEndOf="@+id/iv_ic_localizacao"
        app:layout_constraintTop_toBottomOf="@+id/label_localizacao" />

    <TextView
        android:id="@+id/label_telefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/label_telefone"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
        app:layout_constraintStart_toEndOf="@+id/iv_ic_telefone"
        app:layout_constraintTop_toBottomOf="@+id/ex_endereco" />

    <TextView
        android:id="@+id/ex_telefone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/exemplo_telefone"
        app:layout_constraintEnd_toStartOf="@+id/gl_right"
        app:layout_constraintStart_toEndOf="@+id/iv_ic_telefone"
        app:layout_constraintTop_toBottomOf="@+id/label_telefone" />

    <TextView
        android:id="@+id/label_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/label_email"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
        app:layout_constraintStart_toEndOf="@+id/iv_ic_email"
        app:layout_constraintTop_toBottomOf="@+id/ex_telefone" />

    <TextView
        android:id="@+id/ex_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/exemplo_email"
        app:layout_constraintEnd_toStartOf="@+id/gl_right"
        app:layout_constraintStart_toEndOf="@+id/iv_ic_email"
        app:layout_constraintTop_toBottomOf="@+id/label_email" />

    <Button
        android:id="@+id/btCheckin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorButtom"
        android:text="@string/bt_fazer_checkin"
        android:textColor="@color/colorWithe"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/gl_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <android.support.constraint.Guideline
        android:id="@+id/gl_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="367dp" />


</android.support.constraint.ConstraintLayout>